log
Fri 05 May 2023 02:33:50 AM UTC: 
 tests:  0|5
total_score: 0/70
cb3d3ab
Fri 05 May 2023 02:34:15 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9031b60
Fri 05 May 2023 02:34:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6a496ed
Fri 05 May 2023 02:57:50 AM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:38: error: statement with no effect [-Werror=unused-value]
   65 |                 nodeRemp->sudo[i][k] == valor;
      |                 ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
34bb3b9
Fri 05 May 2023 03:35:02 AM UTC: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:31: error: ‘j’ undeclared (first use in this function)
   66 |             new_node->sudo[i][j] = k;
      |                               ^
sudoku.c:66:31: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:54:9: error: variable ‘nodeRemp’ set but not used [-Werror=unused-but-set-variable]
   54 |   Node *nodeRemp =createNode();
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
84130a9
